onabsolutedeviceorientation should be ondeviceorientationabsolute
Categories
(Core :: DOM: Device Interfaces, defect, P2)
Tracking
()
Tracking | Status | |
---|---|---|
firefox110 | --- | fixed |
People
(Reporter: foolip, Assigned: fanie)
References
Details
(Keywords: good-first-bug)
Attachments
(1 file)
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 11_1_0) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/88.0.4324.96 Safari/537.36
Steps to reproduce:
Compare the spec and Gecko's Web IDL for the event handler attribute:
https://w3c.github.io/deviceorientation/#deviceorientationabsolute
https://github.com/mozilla/gecko-dev/blob/ee110bca4d6cc8892bfca099c15ebb0fc8814816/dom/webidl/Window.webidl#L494
Actual results:
The name is different, with "absolute" up front instead of at the end.
Expected results:
Per spec, the name of the event hander attribute should be "ondeviceorientationabsolute"
I have not been able to figure out if the name of the event fired is also wrong, if it's "absolutedeviceorientation" instead of "deviceorientationabsolute".
Reporter | ||
Comment 1•5 years ago
|
||
There are some failures in WPT that are due to this:
https://wpt.fyi/results/orientation-event/idlharness.https.window.html?run_id=5697912233263104&run_id=5749281250082816&run_id=5730715079540736
Comment 2•5 years ago
|
||
Moving this over to DOM:Events, if this is not the right component please move it over to the correct one.
Comment 3•5 years ago
|
||
Hi Esawin,
Could you help to take a look? It seems that the specification has been changed deviceorientationabsolute
event handler attribute name. Thank you.
Updated•5 years ago
|
Comment 4•4 years ago
|
||
@smaug: do you know who can take this? I'm not a DOM peer, we just happened to need it for Android VR back in the days.
Comment 5•4 years ago
|
||
I wonder why the spec was changed. That was of course very much breaking change.
Comment 6•4 years ago
|
||
But anyone could take this, I think. Should be about replacing the name.
Updated•3 years ago
|
Comment 7•3 years ago
|
||
This good-first-bug hasn't had any activity for 2 months, it is automatically unassigned.
For more information, please visit auto_nag documentation.
Comment 8•3 years ago
|
||
Hi, a quick grep suggests this is probably just a simple rename job and would be happy to do it, although I'm not familiar with this particular code.
Updated•3 years ago
|
Updated•3 years ago
|
Comment 10•3 years ago
|
||
https://github.com/w3c/deviceorientation/commit/c93616036b6f8aa17557bd57cced7acca378448f changed this. Doesn't explain why.
Comment 11•3 years ago
|
||
Comment 12•3 years ago
|
||
bugherder |
Description
•