Bug 1689631 - Renamed onabsolutedeviceorientation to ondeviceorientationabsolute. r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D164964