dom/events/EventListenerManager.cpp
@@ -346,7 +346,7 @@ void EventListenerManager::AddEventListenerInternal(
         }
         break;
       case eDeviceOrientation:
-      case eAbsoluteDeviceOrientation:
+      case eDeviceOrientationAbsolute:
       case eUserProximity:
       case eDeviceLight:
       case eDeviceMotion:
@@ -490,7 +490,7 @@ void EventListenerManager::AddEventListenerInternal(
                      nsPrintfCString("resolvedEventMessage=%s",
                                      ToChar(resolvedEventMessage))
                          .get());
-        NS_ASSERTION(aTypeAtom != nsGkAtoms::onabsolutedeviceorientation,
+        NS_ASSERTION(aTypeAtom != nsGkAtoms::ondeviceorientationabsolute,
                      nsPrintfCString("resolvedEventMessage=%s",
                                      ToChar(resolvedEventMessage))
                          .get());
@@ -666,7 +666,7 @@ void EventListenerManager::ProcessApzAwareEventListenerAdd() {
 bool EventListenerManager::IsDeviceType(EventMessage aEventMessage) {
   switch (aEventMessage) {
     case eDeviceOrientation:
-    case eAbsoluteDeviceOrientation:
+    case eDeviceOrientationAbsolute:
     case eDeviceMotion:
     case eDeviceLight:
     case eUserProximity:
@@ -697,7 +697,7 @@ void EventListenerManager::EnableDevice(EventMessage aEventMessage) {
       window->EnableDeviceSensor(SENSOR_ORIENTATION);
 #endif
       break;
-    case eAbsoluteDeviceOrientation:
+    case eDeviceOrientationAbsolute:
 #ifdef MOZ_WIDGET_ANDROID
       // Falls back to SENSOR_ORIENTATION if unavailable on device.
       window->EnableDeviceSensor(SENSOR_ROTATION_VECTOR);
@@ -742,7 +742,7 @@ void EventListenerManager::DisableDevice(EventMessage aEventMessage) {
 #endif
       window->DisableDeviceSensor(SENSOR_ORIENTATION);
       break;
-    case eAbsoluteDeviceOrientation:
+    case eDeviceOrientationAbsolute:
 #ifdef MOZ_WIDGET_ANDROID
       window->DisableDeviceSensor(SENSOR_ROTATION_VECTOR);
 #endif
