dom/system/nsDeviceSensors.cpp
@@ -394,7 +394,7 @@ void nsDeviceSensors::FireDOMOrientationEvent(EventTarget* aTarget,
     aEventTarget->DispatchEvent(*event);
   };
 
-  Dispatch(aTarget, aIsAbsolute ? u"absolutedeviceorientation"_ns
+  Dispatch(aTarget, aIsAbsolute ? u"deviceorientationabsolute"_ns
                                 : u"deviceorientation"_ns);
 
   // This is used to determine whether relative events have been dispatched
